<resources>
    <string name="app_name">HIM</string>
    <string name="logo">상징</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="name">이름</string>
    <string name="confirm">확인</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="new_password">새 비밀번호</string>
    <string name="new_password_confirmation">새 비밀번호 확인</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="scan_barcode">바코드 스캔</string>
    <string name="shelf_life">유통기한</string>
    <string name="category">카테고리</string>
    <string name="memo">메모</string>
    <string name="picture">사진</string>
    <string name="register_order">주문 등록</string>
    <string name="cancel">취소</string>
    <string name="price">가격</string>
    <string name="consumer">소비자</string>
    <string name="provider">공급자</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="order_list">주문 목록</string>
    <string name="edit_user">회원 변경</string>
    <string name="till">까지</string>
    <string name="won">원</string>
    <string name="barcode">바코드</string>
    <string name="no_barcode">바코드가 없습니다.</string>
    <string name="ingredients_list">식재료 목록</string>
    <string name="ingredientKey">식재료: </string>
    <string name="consumerKey">소비자: </string>
    <string name="providerKey">공급자: </string>
    <string name="cancel_order">주문 취소</string>
    <string name="logout">로그아웃</string>
    <string name="order">주문</string>
</resources>