<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderList">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="405dp"
        android:layout_height="164dp"
        android:layout_margin="8dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="305dp"
            android:splitMotionEvents="false">

            <TextView
                android:layout_width="84dp"
                android:layout_height="82dp"
                android:background="#F44336"
                android:gravity="center"
                android:text="@string/picture"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/shelf_life"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:layout_width="61dp"
                android:layout_height="82dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:background="#ffffff"
                android:gravity="center"
                android:text="@string/scan_barcode"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel_order"
                android:textColor="#000000"
                app:backgroundTint="@color/white" />


        </TableRow>

        <TableRow
            android:layout_width="152dp"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F44336"
                android:gravity="center"
                android:text="@string/picture"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>

