<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        android:contentDescription="@string/picture"
        app:layout_constraintBottom_toTopOf="@+id/nameEdit"
        app:layout_constraintEnd_toStartOf="@+id/scanBarCordButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picture"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="@+id/imageButton" />

    <EditText
        android:id="@+id/shelfLifeEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/shelf_life"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/categoryEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEdit" />

    <EditText
        android:id="@+id/categoryEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/category"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/memoEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shelfLifeEdit" />

    <EditText
        android:id="@+id/memoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/memo"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryEdit" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:text="@string/confirm"
        app:backgroundTint="@color/green_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memoEdit" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/scan_barcode"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/scanBarCordButton"
        app:layout_constraintEnd_toEndOf="@+id/scanBarCordButton"
        app:layout_constraintStart_toStartOf="@+id/scanBarCordButton" />

    <Button
        android:id="@+id/scanBarCordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_barcode"
        app:backgroundTint="@color/green_2"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/shelfLifeEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />


</androidx.constraintlayout.widget.ConstraintLayout>