<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngredientActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="700dp">

        <ImageView
            android:id="@+id/photoButton"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="10dp"
            android:background="@color/gray"
            android:contentDescription="@string/picture"
            android:scaleType="center"
            app:layout_constraintEnd_toStartOf="@+id/barcodeEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoView"
            app:srcCompat="@android:drawable/ic_input_add" />

        <TextView
            android:id="@+id/photoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/picture"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/photoButton"
            app:layout_constraintEnd_toEndOf="@+id/photoButton"
            app:layout_constraintStart_toStartOf="@+id/photoButton"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shelfLifeEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/shelf_life"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/priceEdit"
            app:layout_constraintEnd_toStartOf="@+id/tillView"
            app:layout_constraintStart_toStartOf="@+id/nameEdit"
            app:layout_constraintTop_toBottomOf="@+id/nameEdit" />

        <EditText
            android:id="@+id/priceEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/confirmButton"
            app:layout_constraintEnd_toStartOf="@+id/wonView"
            app:layout_constraintStart_toStartOf="@+id/nameEdit"
            app:layout_constraintTop_toBottomOf="@+id/shelfLifeEdit" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:backgroundTint="@color/green_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/wonView"
            app:layout_constraintStart_toStartOf="@+id/priceEdit"
            app:layout_constraintTop_toBottomOf="@+id/priceEdit" />

        <Button
            android:id="@+id/barcodeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/scan_barcode"
            android:textSize="14sp"
            app:backgroundTint="@color/green_2"
            app:layout_constraintBottom_toBottomOf="@+id/photoButton"
            app:layout_constraintEnd_toEndOf="@+id/barcodeEdit"
            app:layout_constraintStart_toStartOf="@+id/barcodeEdit" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/shelfLifeEdit"
            app:layout_constraintEnd_toEndOf="@+id/barcodeButton"
            app:layout_constraintStart_toStartOf="@+id/photoButton"
            app:layout_constraintTop_toBottomOf="@+id/photoButton" />

        <TextView
            android:id="@+id/tillView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/till"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/shelfLifeEdit"
            app:layout_constraintEnd_toEndOf="@+id/nameEdit"
            app:layout_constraintStart_toEndOf="@+id/shelfLifeEdit"
            app:layout_constraintTop_toTopOf="@+id/shelfLifeEdit" />

        <TextView
            android:id="@+id/wonView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/won"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/priceEdit"
            app:layout_constraintEnd_toEndOf="@+id/tillView"
            app:layout_constraintStart_toEndOf="@+id/priceEdit"
            app:layout_constraintTop_toTopOf="@+id/priceEdit" />

        <EditText
            android:id="@+id/barcodeEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/barcode"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/barcodeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/photoButton" />

        <EditText
            android:id="@+id/imageUrl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="56dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/barcode"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/barcodeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/barcodeEdit"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>