<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFoodActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="900dp">

        <ImageButton
            android:id="@+id/photoButton"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:background="@color/gray"
            android:contentDescription="@string/picture"
            app:layout_constraintBottom_toTopOf="@+id/nameEdit"
            app:layout_constraintEnd_toStartOf="@+id/barcodeButton"
            app:layout_constraintStart_toStartOf="@+id/nameEdit"
            app:srcCompat="@android:drawable/ic_input_add" />

        <TextView
            android:id="@+id/photoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/photoButton"
            app:layout_constraintEnd_toEndOf="@+id/photoButton"
            app:layout_constraintStart_toStartOf="@+id/photoButton" />

        <EditText
            android:id="@+id/shelfLifeEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/shelf_life"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41000003" />

        <EditText
            android:id="@+id/priceEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/price"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/shelfLifeEdit"
            app:layout_constraintStart_toStartOf="@+id/shelfLifeEdit"
            app:layout_constraintTop_toBottomOf="@+id/shelfLifeEdit" />

        <EditText
            android:id="@+id/categoryEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/category"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/priceEdit"
            app:layout_constraintStart_toStartOf="@+id/priceEdit"
            app:layout_constraintTop_toBottomOf="@+id/priceEdit" />

        <EditText
            android:id="@+id/memoEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/memo"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/categoryEdit"
            app:layout_constraintStart_toStartOf="@+id/categoryEdit"
            app:layout_constraintTop_toBottomOf="@+id/categoryEdit" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/confirm"
            app:backgroundTint="@color/green_2"
            app:layout_constraintEnd_toEndOf="@+id/memoEdit"
            app:layout_constraintStart_toStartOf="@+id/memoEdit"
            app:layout_constraintTop_toBottomOf="@+id/memoEdit" />

        <TextView
            android:id="@+id/barcodeView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/barcodeButton"
            app:layout_constraintEnd_toEndOf="@+id/barcodeButton"
            app:layout_constraintStart_toStartOf="@+id/barcodeButton" />

        <Button
            android:id="@+id/barcodeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/scan_barcode"
            android:textSize="14sp"
            app:backgroundTint="@color/green_2"
            app:layout_constraintBottom_toTopOf="@+id/nameEdit"
            app:layout_constraintEnd_toEndOf="@+id/nameEdit"
            app:layout_constraintStart_toEndOf="@+id/photoButton" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/shelfLifeEdit"
            app:layout_constraintEnd_toEndOf="@+id/shelfLifeEdit"
            app:layout_constraintStart_toStartOf="@+id/shelfLifeEdit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>